# gmail-assistant

./: .env  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
migrations/: 20240520031923_create_access_tokens_table.up.sql
src/: config.rs  main.rs  settings.toml.template
src/client/gmail/: mod.rs
src/client/gmail/oauth/: mod.rs  types.rs
src/db/: access_token.rs  mod.rs
src/db/migrations/: 20240520172258_create_access_tokens_table.down.sql
src/db/models/: access_tokens.rs  mod.rs
src/oauth/: mod.rs  types.rs
src/settings/: mod.rs
