[package]
name = "gmail-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.116"
url = { version = "2.5.0", features = ["serde"] }
toml = "0.8.12"
rusqlite = { version = "0.31.0", features = ["chrono"] }
chrono = { version = "0.4.38" }

